# rust-differential-geometry

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: derivable.rs  expression.rs  lib.rs  simplifiable.rs  surface.rs
src/parser/: parser.rs
tests/: test_torus.rs
